Fixat scrollspy så den fungerar

--- a/gustav.html
+++ b/gustav.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <title>Gustav Persson</title>
 </head>
-<body style="position: relative;">
+<body style="position:relative">
         <div class="jumbotron">
             <h1 class="display-4">Gustav Persson</h1>
             <p class="lead">Lorem Ipsum är en utfyllnadstext från tryck- och förlagsindustrin. Lorem ipsum har varit standard ända sedan 1500-talet, när en okänd boksättare tog att antal bokstäver och blandade dem för att göra ett provexemplar av en bok.</p>
@@ -15,10 +15,9 @@
             <a class="btn btn-primary btn-lg" href="#info" role="button">Mer info</a>
         </div>
 
-   <div class="container-fluid">
         <div class="row">
             <div class="col-lg-2">
-                <nav id="navbar-example3" class="navbar navbar-light bg-light">
+                <nav id="navbar-example3" class="navbar navbar-light bg-light" style="position: fixed;">
                     <a class="navbar-brand" href="#">Scrollspy</a>
                 <nav class="nav nav-pills flex-column">
                     <a class="nav-link" href="#item-1">Item 1</a>
@@ -35,34 +34,36 @@
                 </nav>
             </nav>
         </div>
-            
-        <div class="col-lg-9">
-        <div data-spy="scroll" data-target="#navbar-example3" data-offset="0">
-            <h4 id="item-1">Item 1</h4>
-            <p>Det finns många olika varianter av Lorem Ipsum, men majoriteten av dessa har ändrats på någotvis. Antingen med inslag av humor, eller med inlägg av ord som knappast ser trovärdiga ut. Skall man använda långa stycken av Lorem Ipsum bör man försäkra sig om att det inte gömmer sig något pinsamt mitt i texten. Lorem Ipsum-generatorer på internet tenderar att repetera Lorem Ipsum-texten styckvis efter behov, något som gör denna sidan till den första riktiga Lorem Ipsum-generatorn på internet. Den använder ett ordförråd på över 200 ord, kombinerat med ett antal meningsbyggnadsstrukturer som tillsamman genererar Lorem Ipsum som ser ut som en normal mening. Lorem Ipsum genererad på denna sidan är därför alltid fri från repetitioner, humorinslag, märkliga ordformationer osv.
+        
+        <div class="col-lg-7">
+            <div data-spy="scroll" data-target="#navbar-example3" data-offset="0" style="position:relative; height:300px; overflow-y: scroll;">
+                <h4 id="item-1">Item 1</h4>
+                <p>Det finns många olika varianter av Lorem Ipsum, men majoriteten av dessa har ändrats på någotvis. Antingen med inslag av humor, eller med inlägg av ord som knappast ser trovärdiga ut. Skall man använda långa stycken av Lorem Ipsum bör man försäkra sig om att det inte gömmer sig något pinsamt mitt i texten. Lorem Ipsum-generatorer på internet tenderar att repetera Lorem Ipsum-texten styckvis efter behov, något som gör denna sidan till den första riktiga Lorem Ipsum-generatorn på internet. Den använder ett ordförråd på över 200 ord, kombinerat med ett antal meningsbyggnadsstrukturer som tillsamman genererar Lorem Ipsum som ser ut som en normal mening. Lorem Ipsum genererad på denna sidan är därför alltid fri från repetitioner, humorinslag, märkliga ordformationer osv.
+                    </p>
+                <h5 id="item-1-1">Item 1-1</h5>
+                <p>Det är ett välkänt faktum att läsare distraheras av läsbar text på en sida när man skall studera layouten. Poängen med Lorem Ipsum är att det ger ett normalt ordflöde, till skillnad från "Text här, Text här", och ger intryck av att vara läsbar text. Många publiseringprogram och webbutvecklare använder Lorem Ipsum som test-text, och en sökning efter "Lorem Ipsum" avslöjar många webbsidor under uteckling. Olika versioner har dykt upp under åren, ibland av olyckshändelse, ibland med flit (mer eller mindre humoristiska).
+                    </p>
+                <h5 id="item-1-2">Item 1-2</h5>
+                <p>I motsättning till vad många tror, är inte Lorem Ipsum slumpvisa ord. Det har sina rötter i ett stycke klassiskt litteratur på latin från 45 år före år 0, och är alltså över 2000 år gammalt. Richard McClintock, en professor i latin på Hampden-Sydney College i Virginia, översatte ett av de mer ovanliga orden, consectetur, från ett stycke Lorem Ipsum och fann dess ursprung genom att studera användningen av dessa ord i klassisk litteratur. Lorem Ipsum kommer från styckena 1.10.32 och 1.10.33 av "de Finibus Bonorum et Malorum" (Ytterligheterna av ont och gott) av Cicero, skriven 45 före år 0. Boken är en avhandling i teorier om etik, och var väldigt populär under renäsanssen. Den inledande meningen i Lorem Ipsum, "Lorem Ipsum dolor sit amet...", kommer från stycke 1.10.32.
+                    </p>
+                <h4 id="item-2">Item 2</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam in leo libero. Phasellus iaculis porta tincidunt. Sed ac justo consequat, rhoncus purus a, vulputate nisi. Sed eu magna quis velit rutrum molestie nec nec dui. Mauris ut molestie arcu. Suspendisse dignissim lacus et justo finibus ultrices. Praesent ut varius eros. Mauris dictum eu est ut auctor. Vivamus ornare, ligula vel gravida pharetra, erat metus mollis est, ut pretium ex purus sit amet augue. Aenean ex ligula, faucibus nec lacinia sed, cursus non libero. Morbi ullamcorper enim sit amet egestas ultrices. Aliquam in orci ac dolor condimentum sollicitudin sit amet quis dolor. Aenean eu elit sit amet augue molestie auctor. In eget quam magna. Vestibulum vitae mauris imperdiet, pulvinar nisl at, placerat velit.
+                    </p>
+                <h4 id="item-3">Item 3</h4>
+                <p>Nulla id arcu sit amet libero rutrum laoreet. Nullam libero augue, vestibulum eget sagittis sed, convallis sed elit. Vestibulum suscipit lorem et ullamcorper vehicula. Sed suscipit faucibus tristique. Praesent ut lacinia lorem. Nullam suscipit semper pretium. Praesent felis nibh, ultrices at urna quis, ultricies efficitur purus. Duis laoreet, dolor nec dapibus fringilla, dui quam bibendum diam, ac commodo lorem nunc ut ex. Cras porttitor, sem vitae semper commodo, sapien tortor elementum dui, eu rhoncus purus lorem at quam. Aenean ut cursus ante.
+                    </p>
+                <h5 id="item-3-1">Item 3-1</h5>
+                <p>Etiam auctor sollicitudin arcu quis tincidunt. Quisque sodales dui orci, in venenatis tellus varius vel. Vivamus mattis facilisis finibus. Vivamus dignissim massa a sodales rutrum. Praesent et mi quis massa aliquet vehicula non iaculis ante. Integer lacinia sit amet diam sit amet dignissim. Proin elementum molestie enim, a convallis nulla aliquam eget. Morbi eleifend auctor nisi, eget rhoncus velit commodo ac. Nam arcu enim, lacinia in suscipit consectetur, consectetur id augue. Curabitur finibus velit at tellus dapibus, id eleifend sem eleifend.
+                    </p>
+                <h5 id="item-3-2">Item 3-2</h5>
+                <p>Proin tincidunt eu justo id posuere. Maecenas vel facilisis nunc. Ut et lorem orci. Morbi nec tincidunt metus. Nullam ut risus nec nulla feugiat ornare eget quis nunc. Integer condimentum accumsan posuere. Nunc quis finibus lectus, facilisis fermentum libero. Vivamus arcu neque, blandit in porttitor aliquam, auctor vitae nibh. Cras faucibus sem sit amet sem dignissim dignissim. Quisque nec tellus maximus, ultricies enim et, pretium nisl. Pellentesque quam augue, sagittis quis venenatis et, feugiat vitae orci. Maecenas vestibulum sapien a placerat luctus. Curabitur finibus vehicula velit, et rutrum massa ornare id. Vestibulum bibendum faucibus elementum.
+                    I motsättning till vad många tror, är inte Lorem Ipsum slumpvisa ord. Det har sina rötter i ett stycke klassiskt litteratur på latin från 45 år före år 0, och är alltså över 2000 år gammalt. Richard McClintock, en professor i latin på Hampden-Sydney College i Virginia, översatte ett av de mer ovanliga orden, consectetur, från ett stycke Lorem Ipsum och fann dess ursprung genom att studera användningen av dessa ord i klassisk litteratur. Lorem Ipsum kommer från styckena 1.10.32 och 1.10.33 av "de Finibus Bonorum et Malorum" (Ytterligheterna av ont och gott) av Cicero, skriven 45 före år 0. Boken är en avhandling i teorier om etik, och var väldigt populär under renäsanssen. Den inledande meningen i Lorem Ipsum, "Lorem Ipsum dolor sit amet...", kommer från stycke 1.10.32.
+
+                    I motsättning till vad många tror, är inte Lorem Ipsum slumpvisa ord. Det har sina rötter i ett stycke klassiskt litteratur på latin från 45 år före år 0, och är alltså över 2000 år gammalt. Richard McClintock, en professor i latin på Hampden-Sydney College i Virginia, översatte ett av de mer ovanliga orden, consectetur, från ett stycke Lorem Ipsum och fann dess ursprung genom att studera användningen av dessa ord i klassisk litteratur. Lorem Ipsum kommer från styckena 1.10.32 och 1.10.33 av "de Finibus Bonorum et Malorum" (Ytterligheterna av ont och gott) av Cicero, skriven 45 före år 0. Boken är en avhandling i teorier om etik, och var väldigt populär under renäsanssen. Den inledande meningen i Lorem Ipsum, "Lorem Ipsum dolor sit amet...", kommer från stycke 1.10.32.  
                 </p>
-            <h5 id="item-1-1">Item 1-1</h5>
-            <p>Det är ett välkänt faktum att läsare distraheras av läsbar text på en sida när man skall studera layouten. Poängen med Lorem Ipsum är att det ger ett normalt ordflöde, till skillnad från "Text här, Text här", och ger intryck av att vara läsbar text. Många publiseringprogram och webbutvecklare använder Lorem Ipsum som test-text, och en sökning efter "Lorem Ipsum" avslöjar många webbsidor under uteckling. Olika versioner har dykt upp under åren, ibland av olyckshändelse, ibland med flit (mer eller mindre humoristiska).
-                </p>
-            <h5 id="item-1-2">Item 1-2</h5>
-            <p>I motsättning till vad många tror, är inte Lorem Ipsum slumpvisa ord. Det har sina rötter i ett stycke klassiskt litteratur på latin från 45 år före år 0, och är alltså över 2000 år gammalt. Richard McClintock, en professor i latin på Hampden-Sydney College i Virginia, översatte ett av de mer ovanliga orden, consectetur, från ett stycke Lorem Ipsum och fann dess ursprung genom att studera användningen av dessa ord i klassisk litteratur. Lorem Ipsum kommer från styckena 1.10.32 och 1.10.33 av "de Finibus Bonorum et Malorum" (Ytterligheterna av ont och gott) av Cicero, skriven 45 före år 0. Boken är en avhandling i teorier om etik, och var väldigt populär under renäsanssen. Den inledande meningen i Lorem Ipsum, "Lorem Ipsum dolor sit amet...", kommer från stycke 1.10.32.
-                </p>
-            <h4 id="item-2">Item 2</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam in leo libero. Phasellus iaculis porta tincidunt. Sed ac justo consequat, rhoncus purus a, vulputate nisi. Sed eu magna quis velit rutrum molestie nec nec dui. Mauris ut molestie arcu. Suspendisse dignissim lacus et justo finibus ultrices. Praesent ut varius eros. Mauris dictum eu est ut auctor. Vivamus ornare, ligula vel gravida pharetra, erat metus mollis est, ut pretium ex purus sit amet augue. Aenean ex ligula, faucibus nec lacinia sed, cursus non libero. Morbi ullamcorper enim sit amet egestas ultrices. Aliquam in orci ac dolor condimentum sollicitudin sit amet quis dolor. Aenean eu elit sit amet augue molestie auctor. In eget quam magna. Vestibulum vitae mauris imperdiet, pulvinar nisl at, placerat velit.
-                </p>
-            <h4 id="item-3">Item 3</h4>
-            <p>Nulla id arcu sit amet libero rutrum laoreet. Nullam libero augue, vestibulum eget sagittis sed, convallis sed elit. Vestibulum suscipit lorem et ullamcorper vehicula. Sed suscipit faucibus tristique. Praesent ut lacinia lorem. Nullam suscipit semper pretium. Praesent felis nibh, ultrices at urna quis, ultricies efficitur purus. Duis laoreet, dolor nec dapibus fringilla, dui quam bibendum diam, ac commodo lorem nunc ut ex. Cras porttitor, sem vitae semper commodo, sapien tortor elementum dui, eu rhoncus purus lorem at quam. Aenean ut cursus ante.
-                </p>
-            <h5 id="item-3-1">Item 3-1</h5>
-            <p>Etiam auctor sollicitudin arcu quis tincidunt. Quisque sodales dui orci, in venenatis tellus varius vel. Vivamus mattis facilisis finibus. Vivamus dignissim massa a sodales rutrum. Praesent et mi quis massa aliquet vehicula non iaculis ante. Integer lacinia sit amet diam sit amet dignissim. Proin elementum molestie enim, a convallis nulla aliquam eget. Morbi eleifend auctor nisi, eget rhoncus velit commodo ac. Nam arcu enim, lacinia in suscipit consectetur, consectetur id augue. Curabitur finibus velit at tellus dapibus, id eleifend sem eleifend.
-                </p>
-            <h5 id="item-3-2">Item 3-2</h5>
-            <p>Proin tincidunt eu justo id posuere. Maecenas vel facilisis nunc. Ut et lorem orci. Morbi nec tincidunt metus. Nullam ut risus nec nulla feugiat ornare eget quis nunc. Integer condimentum accumsan posuere. Nunc quis finibus lectus, facilisis fermentum libero. Vivamus arcu neque, blandit in porttitor aliquam, auctor vitae nibh. Cras faucibus sem sit amet sem dignissim dignissim. Quisque nec tellus maximus, ultricies enim et, pretium nisl. Pellentesque quam augue, sagittis quis venenatis et, feugiat vitae orci. Maecenas vestibulum sapien a placerat luctus. Curabitur finibus vehicula velit, et rutrum massa ornare id. Vestibulum bibendum faucibus elementum.
-                </p>
+            </div>
         </div>
-    </div>
-    </div>
-    </div>
+</div>
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
