Lagt till tillbaka-knapp

--- a/gustav.html
+++ b/gustav.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="utf-8">
     <title>Gustav Persson</title>
 </head>
@@ -12,12 +13,12 @@
             <p class="lead">Lorem Ipsum är en utfyllnadstext från tryck- och förlagsindustrin. Lorem ipsum har varit standard ända sedan 1500-talet, när en okänd boksättare tog att antal bokstäver och blandade dem för att göra ett provexemplar av en bok.</p>
             <hr class="my-4">
             <p>Lorem ipsum har inte bara överlevt fem århundraden, utan även övergången till elektronisk typografi utan större förändringar. Det blev allmänt känt på 1960-talet i samband med lanseringen av Letraset-ark med avsnitt av Lorem Ipsum, och senare med mjukvaror som Aldus PageMaker.</p>
-            <a class="btn btn-primary btn-lg" href="#info" role="button">Mer info</a>
+            <a class="btn btn-primary btn-lg" href="index.html" role="button"><i class="fa fa-backward mr-1"></i>Tillbaka</a>
         </div>
-
-        <div class="row">
-            <div class="col-lg-2">
-                <nav id="navbar-example3" class="navbar navbar-light bg-light" style="position: fixed;">
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg-2">
+            <nav id="navbar-example3" class="navbar navbar-light bg-light" style="position: fixed;">
                     <a class="navbar-brand" href="#">Scrollspy</a>
                 <nav class="nav nav-pills flex-column">
                     <a class="nav-link" href="#item-1">Item 1</a>
@@ -34,7 +35,7 @@
                 </nav>
             </nav>
         </div>
-        
+
         <div class="col-lg-7">
             <div data-spy="scroll" data-target="#navbar-example3" data-offset="0" style="position:relative; height:300px; overflow-y: scroll;">
                 <h4 id="item-1">Item 1</h4>
@@ -63,6 +64,7 @@
                 </p>
             </div>
         </div>
+    </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
