Lagt till en footer!

--- a/edvin.html
+++ b/edvin.html
@@ -10,5 +10,8 @@
     <h1> Hej !</h1>
     <h2> Välkommen! </h2>
     <h3>Det här är min sida!</h3>
+    
+
+    <footer><p>All rights reserved</p></footer>
 </body>
 </html>
