--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li><a href="#">Start</a></li>
             <li><a href="gustav.html">Gustaf</a></li>
             <li><a href="edvin.html">Edvins fina fil</a></li>
+            <li><a href="jakob.html">Jakobs fil</a></li>
         </ol>
     </nav>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sapiente ipsa consequuntur exercitationem omnis et aperiam delectus minima cumque consectetur eos voluptates quaerat sunt ratione, praesentium aspernatur doloremque facere obcaecati.</p>
