--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
         <ol>
             <li><a href="#">Start</a></li>
-            <li><a href="gustav.html">Gustaf</a></li>
+            <li><a href="gustav.html">Gustav</a></li>
         </ol>
     </nav>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sapiente ipsa consequuntur exercitationem omnis et aperiam delectus minima cumque consectetur eos voluptates quaerat sunt ratione, praesentium aspernatur doloremque facere obcaecati.</p>
